--- a/index.html
+++ b/index.html
@@ -12,19 +12,21 @@
         <a href="..//resume/index.html">Resume</a>
       </nav> 
 	  
-<h2>Education:
+<h2>Education:</h2>
 	<ul>
-	<li>Maine East High School</li>
-	<li>Oakton Community College</li>
-	<li>Illinois Institute Of Technology</li>
+	<li>Maine East High School 2015-1019</li>
+	<li>Oakton Community College 2019-2021</li>
+	<li>Illinois Institute Of Technology 2021-Current</li>
 </ul>
 
-<h2>Work Experience:
+<h3>Work Experience:</h3>
 	<ul>
-	<li>Poolwatch inc. July,2019-Aug,2021</li>
+	<li>
+	Poolwatch inc. July,2019-Aug,2021.
+	Lifeguard:Made sure swimmers were safe. Managed the Chlorine and pH levels daily.</li>
 </ul>
 
-<h2>Awards:
+<h3>Awards:</h3>
 	<ul>
 	<li>High School Diploma</li>
 	<li>Associates Degree(Oakton Community College)</li>
@@ -33,12 +35,12 @@
 <h4>Contact Information</h4>
     <ul>
     <li> 
-        <a class="p-tel" href="tel:1+847-834-1982">847-834-1982</a>
+        <a class="p-tel" href="tel:1+847-834-1982">Phone Number:847-834-1982</a>
     </li>
     <li>
-        <a href="mailto:emasic@hawk.itt.edu">
-            emasic@hawk.iit.edu
-        </a></li>
+        <a href="mailto:emasic@hawk.itt.edu">Email:emasic@hawk.iit.edu</a>
+        </li>
 </ul>
+
 </body>
 </html>
