--- a/index.html
+++ b/index.html
@@ -8,23 +8,24 @@
 <h1>Enis Masic</h1>
 <nav id="navigation">
         <a href="../index.html">Home</a>
-        <a href="..//about/index.html" >About Me</a>
+        <a href="..//aboutme/index.html" >About Me</a>
         <a href="..//resume/index.html">Resume</a>
       </nav> 
 	  
 <h2>Education:</h2>
 	<ul>
-	<li>Maine East High School 2015-1019</li>
-	<li>Oakton Community College 2019-2021</li>
-	<li>Illinois Institute Of Technology 2021-Current</li>
+	<li>Maine East High School. 2015-1019</li>
+	<li>Oakton Community College. 2019-2021</li>
+	<li>Illinois Institute Of Technology. 2021-Current</li>
 </ul>
 
 <h3>Work Experience:</h3>
-	<ul>
-	<li>
-	Poolwatch inc. July,2019-Aug,2021.
-	Lifeguard:Made sure swimmers were safe. Managed the Chlorine and pH levels daily.</li>
-</ul>
+	   <ul>
+       <li>
+            Poolwatch inc. July,2019-Aug,2021
+            Lifeguard: Managed the Chlorine and pH levels of the pool. Keeping watch of swimmers and making sure everyone is safe. 
+        </li>
+    </ul>     
 
 <h3>Awards:</h3>
 	<ul>
