images to correct folder

--- a/about_me/index.html
+++ b/about_me/index.html
@@ -2,8 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>About Me:Enis Masic</title>
 </head>
@@ -51,11 +49,9 @@
     I've hiked in places such as Japan, Arizona, Colorado, Bosnia and Herzegovina, and Croatia. 
 </li>
    </ul>   
-   <figure>
-    <img src="../images/Japan.JPG" alt="Image of me!">
-    <img src="../assets/Colorado.jpg" alt="Image of me!">
-    <img src="../assets/Arizona.JPG" alt="Image of me!">
-    </figure>
+   <h2>HTML Image</h2>
+<img src="/images/Japan.JPG" alt="Japan" width="400
+" height="333">
     
     </body>
 
