Images to index file
Added the images to the file

--- a/about_me/index.html
+++ b/about_me/index.html
@@ -6,17 +6,18 @@
     <title>About Me:Enis Masic</title>
 </head>
 <body>
+<ul>
     <nav id="navigation">
-        <a href="../index.html">Home</a>
-        <a href="../aboutme/index.html" > About Me</a>
-        <a href="../myresume/index.html">Resume</a>
-      </nav>
+       <li> <a href="../index.html">Home</a> </li>
+       <li> <a href="../aboutme/index.html" > About Me</a> </li>
+       <li> <a href="../myresume/index.html">Resume</a> </li>
+      </nav> </ul>
 <header> 
     <h1>
         About Me:
     </h1>
     <figure>
-        <img src="../assets/me2.JPG" alt="Image of me!">
+        <img src="../about_me/images/me.JPG" alt="Image of me!" width="400" height="300">
     </figure>
     </header>
     <p>
@@ -49,9 +50,11 @@
     I've hiked in places such as Japan, Arizona, Colorado, Bosnia and Herzegovina, and Croatia. 
 </li>
    </ul>   
-   <h2>HTML Image</h2>
-<img src="/images/Japan.JPG" alt="Japan" width="400
-" height="333">
+   <h2>Images of me hiking</h2>
+    <figure>
+    <img src="../about_me/images/arizona.JPG" alt="Image of me!" width="400" height="300">
+    <img src="../about_me/images/colorado.JPG" alt="Image of me!" width="400" height="300">
+    </figure>
     
     </body>
 
