--- a/myresume/index.html
+++ b/myresume/index.html
@@ -5,13 +5,14 @@
 <title>Resume</title>
 </head>
 <body>
+<ul>
+    <nav id="navigation">
+       <li> <a href="../index.html">Home</a> </li>
+       <li> <a href="../aboutme/index.html" > About Me</a> </li>
+       <li> <a href="../myresume/index.html">Resume</a> </li>
+      </nav> </ul>
 <h1>Enis Masic</h1>
-<nav id="navigation">
-        <a href="../index.html">Home</a>
-        <a href="..//aboutme/index.html" >About Me</a>
-        <a href="..//resume/index.html">Resume</a>
-      </nav> 
-	  
+ 
 <h2>Education:</h2>
 	<ul>
 	<li>Maine East High School. 2015-1019</li>
@@ -19,21 +20,26 @@
 	<li>Illinois Institute Of Technology. 2021-Current</li>
 </ul>
 
-<h3>Work Experience:</h3>
+<h2>Work Experience:</h2>
 	   <ul>
-       <li>
-            Poolwatch inc. July,2019-Aug,2021
-            Lifeguard: Managed the Chlorine and pH levels of the pool. Keeping watch of swimmers and making sure everyone is safe. 
+	   <li>
+			<strong>Landings Home Owners Association. May,2018-Sept,2018</strong>
+			<p>Gate Guard: Act as security by confirming visitors and maintaining a log of incoming and departing vehicles. </p>
+       </li>
+	   <li>
+            <strong>Poolwatch inc. July,2019-Aug,2021</strong>
+            <p>Lifeguard: Managed the Chlorine and pH levels of the pool to make sure it is safe to swim in. Keeping watch of swimmers making sure no one drownes.</p> 
         </li>
     </ul>     
 
-<h3>Awards:</h3>
+<h2>Awards:</h2>
 	<ul>
 	<li>High School Diploma</li>
-	<li>Associates Degree(Oakton Community College)</li>
+	<li>Associates Degree</li>
+	<li>Bachelors in Information Technology Management (Expected 2023)</li>
 </ul>
 
-<h4>Contact Information</h4>
+<h4>Contact Information:</h4>
     <ul>
     <li> 
         <a class="p-tel" href="tel:1+847-834-1982">Phone Number:847-834-1982</a>
