--- a/about_me/index.html
+++ b/about_me/index.html
@@ -9,7 +9,7 @@
 <ul>
     <nav id="navigation">
        <li> <a href="../index.html">Home</a> </li>
-       <li> <a href="../aboutme/index.html" > About Me</a> </li>
+       <li> <a href="../about_me/index.html" > About Me</a> </li>
        <li> <a href="../myresume/index.html">Resume</a> </li>
       </nav> </ul>
 <header> 
