--- a/homepage/index.html
+++ b/homepage/index.html
@@ -7,7 +7,7 @@
 <body>
 <ul>
     <nav id="navigation">
-       <li> <a href="../homepage/index.html">Home</a> </li>
+       <li> <a href="../index.html">Home</a> </li>
        <li> <a href="../about_me/index.html" > About Me</a> </li>
        <li> <a href="../myresume/index.html">Resume</a> </li>
       </nav> </ul>
@@ -21,6 +21,9 @@
   <source src="cat.MOV" type="video/MOV">
   Your browser does not support HTML video.
 </video>
+
+ 
+
 
 </body>
 </html>
