3 folders for 3 index.html files

--- a/about_me/index.html
+++ b/about_me/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
     <title>About Me:Enis Masic</title>
 </head>
 <body>
 <ul>
     <nav id="navigation">
-       <li> <a href="../index.html">Home</a> </li>
+       <li> <a href="../homepage/index.html">Home</a> </li>
        <li> <a href="../about_me/index.html" > About Me</a> </li>
        <li> <a href="../myresume/index.html">Resume</a> </li>
       </nav> </ul>
