--- a/myresume/index.html
+++ b/myresume/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <ul>
-    <nav id="navigation">
-       <li> <a href="../index.html">Home</a> </li>
+   <nav id="navigation">
+       <li> <a href="../homepage/index.html">Home</a> </li>
        <li> <a href="../about_me/index.html" > About Me</a> </li>
        <li> <a href="../myresume/index.html">Resume</a> </li>
       </nav> </ul>
