--- a/homepage/index.html
+++ b/homepage/index.html
@@ -17,11 +17,13 @@
 
 <h2>Some videos I took over the summer that I would like to share</h2>
 
-<video width="400" controls>
-  <source src="cat.MOV" type="video/MOV">
-  Your browser does not support HTML video.
+<video <video width="400" height="250" controls>
+  <source src="stl.mp4" type="video/mp4">
 </video>
 
+<video <video width="400" height="250" controls>
+  <source src="fireworks.MOV" type="video/MOV">
+</video>
  
 
 
