added cat video and more description

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -13,7 +13,7 @@
       </nav> </ul>
  <h1>Home Page</h1>
  <p> Hello everyone my name is Enis Masic and this is the home page of the project. 
-	 In this project I have created two web pages, a resume page and an about me page.</p>
+	 In this project I have created two web pages,a resume page and an about me page. Click the links above to navigate to them.</p>
 
 <h2>Some videos I took over the summer that I would like to share</h2>
 
@@ -22,9 +22,13 @@
 </video>
 
 <video <video width="400" height="250" controls>
-  <source src="fireworks.MOV" type="video/MOV">
+  <source src="fireworks.mp4" type="video/mp4">
 </video>
  
+ <h2>Cat video</h2>
+ <video <video width="400" height="250" controls>
+  <source src="cat.mp4" type="video/mp4">
+</video>
 
 
 </body>
