--- a/index.html
+++ b/index.html
@@ -1,54 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-<title>Resume</title>
+    <meta charset="UTF-8">
+    <title>About Me:Enis Masic</title>
 </head>
 <body>
 <ul>
-   <nav id="navigation">
+    <nav id="navigation">
        <li> <a href="../homepage/index.html">Home</a> </li>
        <li> <a href="../about_me/index.html" > About Me</a> </li>
        <li> <a href="../myresume/index.html">Resume</a> </li>
       </nav> </ul>
-<h1>Enis Masic</h1>
- 
-<h2>Education:</h2>
-	<ul>
-	<li>Maine East High School. 2015-1019</li>
-	<li>Oakton Community College. 2019-2021</li>
-	<li>Illinois Institute Of Technology. 2021-Current</li>
-</ul>
+<header> 
+    <h1>
+        About Me:
+    </h1>
+    <figure>
+        <img src="../about_me/images/me.JPG" alt="Image of me!" width="400" height="300">
+    </figure>
+    </header>
+    <p>
+        I'm currently a fourth year undergraduate ITM student at IIT. 
+        I transferred from Oakton Community College.
+     </p>
 
-<h2>Work Experience:</h2>
-	   <ul>
-	   <li>
-	   <strong>Landings Home Owners Association. May,2018-Sept,2018</strong>
-	   <p>Gate Guard: Act as security by confirming visitors and maintaining a log of incoming and departing vehicles. </p>
-       </li>
-	   
-	   <li>
-	   <strong>Poolwatch inc. July,2019-Aug,2021</strong>
-	   <p>Lifeguard: Managed the Chlorine and pH levels of the pool to make sure it is safe to swim in. Keeping watch of swimmers making sure no one drownes.</p> 
-	   </li>
-    </ul>     
 
-<h2>Awards:</h2>
-	<ul>
-	<li>High School Diploma</li>
-	<li>Associates Degree</li>
-	<li>Bachelors in Information Technology Management (Expected 2023)</li>
-</ul>
-
-<h4>Contact Information:</h4>
+    <h2>Hobbies:</h2>
     <ul>
-    <li> 
-        <a class="p-tel" href="tel:1+847-834-1982">Phone Number:847-834-1982</a>
-    </li>
-    <li>
-        <a href="mailto:emasic@hawk.itt.edu">Email:emasic@hawk.iit.edu</a>
-        </li>
-</ul>
 
-</body>
+   <li>
+       Video Games:
+       I enjoy playing video games with my friends and family in my spare time. 
+	   Favorite game:Witcher 3.
+	   Games currently playing: Valorant, Apex Legends, and Rocket League.
+       I have been playing video games for as long as I can remeber and what ultimately got me into gaming
+	   are my two older brothers who would always let me watch them play all the time. 
+       The first video game that I ever played was Sonic Adventure 2. 
+</li>
+
+   <li>
+      Activities:  
+      I enjoy going to the gym and playing soccer. Soccer has always been my favorite sport. What got me into the sport was my dad. My dad was once a soccer player in Bosnia before he had to flee the country because of the war. When I was younger everyday after school I would go to a park where I would go practice my fundamentals with my dad. 
+      I generally go to the gym four to six times each week. I love going to the gym because I love pushing myself and making my body stronger everyday.
+      </li>
+
+   <li>Travel & Hiking: 
+    I also love to travel the world and hike. I have traveled to countries like Japan, Mexico, Bosnia, and Croatia. I also love to hike all the time with friends and family.
+    I've hiked in places such as Japan, Arizona, Colorado, Bosnia and Herzegovina, and Croatia. 
+</li>
+   </ul>   
+   <h2>Images of me hiking</h2>
+    <figure>
+    <img src="../about_me/images/arizona.JPG" alt="Image of me!" width="400" height="300">
+    <img src="../about_me/images/colorado.JPG" alt="Image of me!" width="400" height="300">
+    </figure>
+    
+    </body>
+
 </html>
