trying to fix issue

--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 </head>
 <body>
 <ul>
-    <nav id="navigation">
-       <li> <a href="../homepage/index.html">Home</a> </li>
-       <li> <a href="../about_me/index.html" > About Me</a> </li>
-       <li> <a href="../myresume/index.html">Resume</a> </li>
+      <nav id="navigation">
+       <li> <a href="../home.html">Home</a> </li>
+       <li> <a href="../index.html" > About Me</a> </li>
+       <li> <a href="../resume.html">Resume</a> </li>
       </nav> </ul>
 <header> 
     <h1>
         About Me:
     </h1>
     <figure>
-        <img src="../about_me/images/me.JPG" alt="Image of me!" width="400" height="300">
+        <img src="../images/me.JPG" alt="Image of me!" width="400" height="300">
     </figure>
     </header>
     <p>
@@ -51,8 +51,8 @@
    </ul>   
    <h2>Images of me hiking</h2>
     <figure>
-    <img src="../about_me/images/arizona.JPG" alt="Image of me!" width="400" height="300">
-    <img src="../about_me/images/colorado.JPG" alt="Image of me!" width="400" height="300">
+    <img src="../images/arizona.JPG" alt="Image of me!" width="400" height="300">
+    <img src="../images/colorado.JPG" alt="Image of me!" width="400" height="300">
     </figure>
     
     </body>
