--- a/resume.html
+++ b/resume.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 <ul>
-   <nav id="navigation">
-       <li> <a href="../homepage/index.html">Home</a> </li>
-       <li> <a href="../about_me/index.html" > About Me</a> </li>
-       <li> <a href="../myresume/index.html">Resume</a> </li>
+     <nav id="navigation">
+       <li> <a href="../home.html">Home</a> </li>
+       <li> <a href="../index.html" > About Me</a> </li>
+       <li> <a href="../resume.html">Resume</a> </li>
       </nav> </ul>
 <h1>Enis Masic</h1>
  
