--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body>
 <ul>
      <nav id="navigation">
-       <li> <a href="../homepage/index.html">Home</a> </li>
-       <li> <a href="../about_me/index.html" > About Me</a> </li>
-       <li> <a href="../index.html">Resume</a> </li>
+       <li> <a href="homepage/index.html">Home</a> </li>
+       <li> <a href="about_me/index.html" > About Me</a> </li>
+       <li> <a href="index.html">Resume</a> </li>
       </nav> </ul>
 <h1>Enis Masic</h1>
  
