fixed nav issue

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -5,12 +5,13 @@
 <title>Home</title>
 </head>
 <body>
-<ul>
     <nav id="navigation">
+	<ul>
        <li> <a href="../homepage/index.html">Home</a> </li>
        <li> <a href="../about_me/index.html" > About Me</a> </li>
        <li> <a href="../index.html">Resume</a> </li>
-      </nav> </ul>
+     </ul>
+	 </nav> 
  <h1>Home Page</h1>
  <p> Hello everyone my name is Enis Masic and this is the home page of the project. 
 	 In this project I have created two web pages,a resume page and an about me page. Click the links above to navigate to them.</p>
