--- a/about_me/index.html
+++ b/about_me/index.html
@@ -5,12 +5,13 @@
     <title>About Me:Enis Masic</title>
 </head>
 <body>
-<ul>
-    <nav id="navigation">
+ <nav id="navigation">
+	<ul>
        <li> <a href="../homepage/index.html">Home</a> </li>
        <li> <a href="../about_me/index.html" > About Me</a> </li>
        <li> <a href="../index.html">Resume</a> </li>
-      </nav> </ul>
+     </ul>
+	 </nav> 
 <header> 
     <h1>
         About Me:
