--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
 <title>Resume</title>
 </head>
 <body>
-<ul>
-     <nav id="navigation">
-       <li> <a href="homepage/index.html">Home</a> </li>
-       <li> <a href="about_me/index.html" > About Me</a> </li>
-       <li> <a href="index.html">Resume</a> </li>
-      </nav> </ul>
+ <nav id="navigation">
+	<ul>
+       <li> <a href="../homepage/index.html">Home</a> </li>
+       <li> <a href="../about_me/index.html" > About Me</a> </li>
+       <li> <a href="../index.html">Resume</a> </li>
+     </ul>
+	 </nav> 
 <h1>Enis Masic</h1>
  
 <h2>Education:</h2>
