took out extra video tag

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -18,16 +18,16 @@
 
 <h2>Some videos I took over the summer that I would like to share</h2>
 
-<video <video width="400" height="250" controls>
+<video width="400" height="250" controls>
   <source src="stl.mp4" type="video/mp4">
 </video>
 
-<video <video width="400" height="250" controls>
+<video width="400" height="250" controls>
   <source src="fireworks.mp4" type="video/mp4">
 </video>
  
  <h2>Cat video</h2>
- <video <video width="400" height="250" controls>
+ <video width="400" height="250" controls>
   <source src="cat.mp4" type="video/mp4">
 </video>
 
