had to lowercase jpg

--- a/about_me/index.html
+++ b/about_me/index.html
@@ -52,8 +52,8 @@
    </ul>   
    <h2>Images of me hiking</h2>
     <figure>
-    <img src="../about_me/images/arizona.JPG" alt="Image of me!" width="400" height="300">
-    <img src="../about_me/images/colorado.JPG" alt="Image of me!" width="400" height="300">
+    <img src="../about_me/images/arizona.jpg" alt="Image of me!" width="400" height="300">
+    <img src="../about_me/images/colorado.jpg" alt="Image of me!" width="400" height="300">
     </figure>
     
     </body>
