--- a/aboutme.html
+++ b/aboutme.html
@@ -7,8 +7,8 @@
 <body>
 <nav id="navigation">
 	<ul>
-       <li> <a href="../homepage/index.html">Home</a> </li>
-       <li> <a href="../about_me/index.html" > About Me</a> </li>
+       <li> <a href="../home.html">Home</a> </li>
+       <li> <a href="../aboutme.html" > About Me</a> </li>
        <li> <a href="../index.html">Resume</a> </li>
      </ul>
 	 </nav> 
@@ -17,7 +17,7 @@
         About Me:
     </h1>
     <figure>
-        <img src="../about_me/images/me.JPG" alt="Image of me!" width="400" height="300">
+        <img src="../media/me.JPG" alt="Image of me!" width="400" height="300">
     </figure>
     </header>
     <p>
@@ -52,8 +52,8 @@
    </ul>   
    <h2>Images of me hiking</h2>
     <figure>
-    <img src="../about_me/images/arizona.jpg" alt="Image of me!" width="400" height="300">
-    <img src="../about_me/images/colorado.jpg" alt="Image of me!" width="400" height="300">
+    <img src="../media/arizona.jpg" alt="Image of me!" width="400" height="300">
+    <img src="../media/colorado.jpg" alt="Image of me!" width="400" height="300">
     </figure>
     
     </body>
