--- a/home.html
+++ b/home.html
@@ -7,8 +7,8 @@
 <body>
     <nav id="navigation">
 	<ul>
-       <li> <a href="../homepage/index.html">Home</a> </li>
-       <li> <a href="../about_me/index.html" > About Me</a> </li>
+       <li> <a href="../home.html">Home</a> </li>
+       <li> <a href="../aboutme.html" > About Me</a> </li>
        <li> <a href="../index.html">Resume</a> </li>
      </ul>
 	 </nav> 
