--- a/aboutme.html
+++ b/aboutme.html
@@ -7,9 +7,9 @@
 <body>
 <nav id="navigation">
 	<ul>
-       <li> <a href="../home.html">Home</a> </li>
-       <li> <a href="../aboutme.html" > About Me</a> </li>
-       <li> <a href="../index.html">Resume</a> </li>
+        <li> <a href="https://Enismasic.github.io/ProjectOne/home">Home</a> </li>
+       <li> <a href="https://Enismasic.github.io/ProjectOne/aboutme"> About Me</a> </li>
+       <li> <a href="https://Enismasic.github.io/ProjectOne">Resume</a> </li>
      </ul>
 	 </nav> 
 <header> 
@@ -17,7 +17,7 @@
         About Me:
     </h1>
     <figure>
-        <img src="../media/me.JPG" alt="Image of me!" width="400" height="300">
+        <img src="../about_me/media/me.JPG" alt="Image of me!" width="400" height="300">
     </figure>
     </header>
     <p>
