--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body>
  <nav id="navigation">
 	<ul>
-       <li> <a href="home.html">Home</a> </li>
-       <li> <a href="aboutme.html" > About Me</a> </li>
-       <li> <a href="index.html">Resume</a> </li>
+       <li> <a href="https://Enismasic.github.io/ProjectOne/home">Home</a> </li>
+       <li> <a href="https://Enismasic.github.io/ProjectOne/aboutme"> About Me</a> </li>
+       <li> <a href="https://Enismasic.github.io/ProjectOne">Resume</a> </li>
      </ul>
 	 </nav> 
 <h1>Enis Masic</h1>
