trying to fix links

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
  <nav id="navigation">
 	<ul>
-       <li> <a href="https://Enismasic.github.io/ProjectOne/home">Home</a> </li>
-       <li> <a href="https://Enismasic.github.io/ProjectOne/aboutme"> About Me</a> </li>
+       <li> <a href="https://Enismasic.github.io/ProjectOne/home.html">Home</a> </li>
+       <li> <a href="https://Enismasic.github.io/ProjectOne/aboutme.html"> About Me</a> </li>
        <li> <a href="https://Enismasic.github.io/ProjectOne">Resume</a> </li>
      </ul>
 	 </nav> 
