--- a/home.html
+++ b/home.html
@@ -19,16 +19,16 @@
 <h2>Some videos I took over the summer that I would like to share</h2>
 
 <video width="400" height="250" controls>
-  <source src="stl.mp4" type="video/mp4">
+  <source src="media/stl.mp4" type="video/mp4">
 </video>
 
 <video width="400" height="250" controls>
-  <source src="fireworks.mp4" type="video/mp4">
+  <source src="media/fireworks.mp4" type="video/mp4">
 </video>
  
  <h2>Cat video</h2>
  <video width="400" height="250" controls>
-  <source src="cat.mp4" type="video/mp4">
+  <source src="media/cat.mp4" type="video/mp4">
 </video>
 
 </body>
