--- a/home.html
+++ b/home.html
@@ -18,18 +18,10 @@
 
 <h2>Some videos I took over the summer that I would like to share</h2>
 
-<video width="400" height="250" controls>
-  <source src="media/stl.mp4" type="video/mp4">
-</video>
+  <iframe width="400" height="250" src="media/stl.mp4"></iframe>
 
-<video width="400" height="250" controls>
-  <source src="media/fireworks.mp4" type="video/mp4">
-</video>
+  <iframe width="400" height="250" src="media/fireworks.mp4"></iframe>
  
  <h2>Cat video</h2>
- <video width="400" height="250" controls>
-  <source src="media/cat.mp4" type="video/mp4">
-</video>
-
-</body>
+	<iframe width="400" height="250" src="media/cat.mp4"></iframe>
 </html>
