fixed html formatting

--- a/home.html
+++ b/home.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-<title>Home</title>
-</head>
-<body>
-    <nav id="navigation">
-	<ul>
-       <li> <a href="https://Enismasic.github.io/ProjectOne/home.html">Home</a> </li>
-       <li> <a href="https://Enismasic.github.io/ProjectOne/aboutme.html"> About Me</a> </li>
-       <li> <a href="https://Enismasic.github.io/ProjectOne">Resume</a> </li>
-     </ul>
-	 </nav> 
- <h1>Home Page</h1>
- <p> Hello everyone my name is Enis Masic and this is the home page of the project. 
-	 In this project I have created two web pages,a resume page and an about me page. Click the links above to navigate to them.</p>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Home</title>
+    </head>
+    <body>
+        <nav id="navigation">
+            <ul>
+                <li><a href="https://Enismasic.github.io/ProjectOne/home.html">Home</a></li>
+                <li><a href="https://Enismasic.github.io/ProjectOne/aboutme.html"> About Me</a></li>
+                <li><a href="https://Enismasic.github.io/ProjectOne">Resume</a></li>
+            </ul>
+        </nav>
+        <h1>Home Page</h1>
+        <p>Hello everyone my name is Enis Masic and this is the home page of the project. In this project I have created two web pages,a resume page and an about me page. Click the links above to navigate to them.</p>
 
-<h2>Some videos I took over the summer that I would like to share</h2>
+        <h2>Some videos I took over the summer that I would like to share</h2>
 
-  <iframe width="400" height="250" src="media/stl.mp4"></iframe>
+        <iframe width="400" height="250" src="media/stl.mp4"></iframe>
 
-  <iframe width="400" height="250" src="media/fireworks.mp4"></iframe>
- 
- <h2>Cat video</h2>
-	<iframe width="400" height="250" src="media/cat.mp4"></iframe>
+        <iframe width="400" height="250" src="media/fireworks.mp4"></iframe>
+
+        <h2>Cat video</h2>
+        <iframe width="400" height="250" src="media/cat.mp4"></iframe>
+    </body>
 </html>
