--- a/index.html
+++ b/index.html
@@ -1,55 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-<title>Resume</title>
-</head>
-<body>
- <nav id="navigation">
-	<ul>
-       <li> <a href="https://enismasic.github.io/ProjectOne/home.html">Home</a> </li>
-       <li> <a href="https://enismasic.github.io/ProjectOne/aboutme.html"> About Me</a> </li>
-       <li> <a href="https://enismasic.github.io/ProjectOne">Resume</a> </li>
-     </ul>
-	 </nav> 
-<h1>Enis Masic</h1>
- 
-<h2>Education:</h2>
-	<ul>
-	<li>Maine East High School. 2015-1019</li>
-	<li>Oakton Community College. 2019-2021</li>
-	<li>Illinois Institute Of Technology. 2021-Current</li>
-</ul>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Resume</title>
+    </head>
+    <body>
+        <nav id="navigation">
+            <ul>
+                <li><a href="https://enismasic.github.io/ProjectOne/home.html">Home</a></li>
+                <li><a href="https://enismasic.github.io/ProjectOne/aboutme.html"> About Me</a></li>
+                <li><a href="https://enismasic.github.io/ProjectOne">Resume</a></li>
+            </ul>
+        </nav>
+        <h1>Enis Masic</h1>
 
-<h2>Work Experience:</h2>
-	   <ul>
-	   <li>
-	   <strong>Landings Home Owners Association. May,2018-Sept,2018</strong>
-	   <p>Gate Guard: Act as security by confirming visitors and maintaining a log of incoming and departing vehicles. </p>
-       </li>
-	   
-	   <li>
-	   <strong>Poolwatch inc. July,2019-Aug,2021</strong>
-	   <p>Lifeguard: Managed the Chlorine and pH levels of the pool to make sure it is safe to swim in. Keeping watch of swimmers making sure no one drownes.</p> 
-	   </li>
-    </ul>     
+        <h2>Education:</h2>
+        <ul>
+            <li>Maine East High School. 2015-1019</li>
+            <li>Oakton Community College. 2019-2021</li>
+            <li>Illinois Institute Of Technology. 2021-Current</li>
+        </ul>
 
-<h2>Awards:</h2>
-	<ul>
-	<li>High School Diploma</li>
-	<li>Associates Degree</li>
-	<li>Bachelors in Information Technology Management (Expected 2023)</li>
-</ul>
+        <h2>Work Experience:</h2>
+        <ul>
+            <li>
+                <strong>Landings Home Owners Association. May,2018-Sept,2018</strong>
+                <p>Gate Guard: Act as security by confirming visitors and maintaining a log of incoming and departing vehicles.</p>
+            </li>
 
-<h4>Contact Information:</h4>
-    <ul>
-    <li> 
-        <a class="p-tel" href="tel:1+847-834-1982">Phone Number:847-834-1982</a>
-    </li>
-    <li>
-        <a href="mailto:emasic@hawk.itt.edu">Email:emasic@hawk.iit.edu</a>
-        </li>
-</ul>
+            <li>
+                <strong>Poolwatch inc. July,2019-Aug,2021</strong>
+                <p>Lifeguard: Managed the Chlorine and pH levels of the pool to make sure it is safe to swim in. Keeping watch of swimmers making sure no one drownes.</p>
+            </li>
+        </ul>
 
-</body>
+        <h2>Awards:</h2>
+        <ul>
+            <li>High School Diploma</li>
+            <li>Associates Degree</li>
+            <li>Bachelors in Information Technology Management (Expected 2023)</li>
+        </ul>
+
+        <h4>Contact Information:</h4>
+        <ul>
+            <li>
+                <a class="p-tel" href="tel:1+847-834-1982">Phone Number:847-834-1982</a>
+            </li>
+            <li>
+                <a href="mailto:emasic@hawk.itt.edu">Email:emasic@hawk.iit.edu</a>
+            </li>
+        </ul>
+    </body>
 </html>
