--- a/aboutme.html
+++ b/aboutme.html
@@ -1,61 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>About Me:Enis Masic</title>
-</head>
-<body>
-<nav id="navigation">
-	<ul>
-        <li> <a href="https://Enismasic.github.io/ProjectOne/home.html">Home</a> </li>
-       <li> <a href="https://Enismasic.github.io/ProjectOne/aboutme.html"> About Me</a> </li>
-       <li> <a href="https://Enismasic.github.io/ProjectOne">Resume</a> </li>
-     </ul>
-	 </nav> 
-<header> 
-    <h1>
-        About Me:
-    </h1>
-    <figure>
-        <img src="media/me.JPG" alt="Image of me!" width="400" height="300">
-    </figure>
-    </header>
-    <p>
-        I'm currently a fourth year undergraduate ITM student at IIT. 
-        I transferred from Oakton Community College.
-     </p>
+    <head>
+        <meta charset="UTF-8" />
+        <title>About Me:Enis Masic</title>
+    </head>
+    <body>
+        <nav id="navigation">
+            <ul>
+                <li><a href="https://Enismasic.github.io/ProjectOne/home.html">Home</a></li>
+                <li><a href="https://Enismasic.github.io/ProjectOne/aboutme.html"> About Me</a></li>
+                <li><a href="https://Enismasic.github.io/ProjectOne">Resume</a></li>
+            </ul>
+        </nav>
+        <header>
+            <h1>
+                About Me:
+            </h1>
+            <figure>
+                <img src="media/me.JPG" alt="Image of me!" width="400" height="300" />
+            </figure>
+        </header>
+        <p>
+            I'm currently a fourth year undergraduate ITM student at IIT. I transferred from Oakton Community College.
+        </p>
 
+        <h2>Hobbies:</h2>
+        <ul>
+            <li>
+                Video Games: I enjoy playing video games with my friends and family in my spare time. Favorite game:Witcher 3. Games currently playing: Valorant, Apex Legends, and Rocket League. I have been playing video games for as long
+                as I can remeber and what ultimately got me into gaming are my two older brothers who would always let me watch them play all the time. The first video game that I ever played was Sonic Adventure 2.
+            </li>
 
-    <h2>Hobbies:</h2>
-    <ul>
+            <li>
+                Activities: I enjoy going to the gym and playing soccer. Soccer has always been my favorite sport. What got me into the sport was my dad. My dad was once a soccer player in Bosnia before he had to flee the country because of
+                the war. When I was younger everyday after school I would go to a park where I would go practice my fundamentals with my dad. I generally go to the gym four to six times each week. I love going to the gym because I love
+                pushing myself and making my body stronger everyday.
+            </li>
 
-   <li>
-       Video Games:
-       I enjoy playing video games with my friends and family in my spare time. 
-	   Favorite game:Witcher 3.
-	   Games currently playing: Valorant, Apex Legends, and Rocket League.
-       I have been playing video games for as long as I can remeber and what ultimately got me into gaming
-	   are my two older brothers who would always let me watch them play all the time. 
-       The first video game that I ever played was Sonic Adventure 2. 
-</li>
-
-   <li>
-      Activities:  
-      I enjoy going to the gym and playing soccer. Soccer has always been my favorite sport. What got me into the sport was my dad. My dad was once a soccer player in Bosnia before he had to flee the country because of the war. When I was younger everyday after school I would go to a park where I would go practice my fundamentals with my dad. 
-      I generally go to the gym four to six times each week. I love going to the gym because I love pushing myself and making my body stronger everyday.
-      </li>
-
-   <li>Travel & Hiking: 
-    I also love to travel the world and hike. I have traveled to countries like Japan, Mexico, Bosnia, and Croatia. I also love to hike all the time with friends and family.
-    I've hiked in places such as Japan, Arizona, Colorado, Bosnia and Herzegovina, and Croatia. 
-</li>
-   </ul>   
-   <h2>Images of me hiking</h2>
-    <figure>
-    <img src="media/arizona.jpg" alt="Image of me!" width="400" height="300">
-    <img src="media/colorado.jpg" alt="Image of me!" width="400" height="300">
-    </figure>
-    
+            <li>
+                Travel & Hiking: I also love to travel the world and hike. I have traveled to countries like Japan, Mexico, Bosnia, and Croatia. I also love to hike all the time with friends and family. I've hiked in places such as Japan,
+                Arizona, Colorado, Bosnia and Herzegovina, and Croatia.
+            </li>
+        </ul>
+        <h2>Images of me hiking</h2>
+        <figure>
+            <img src="media/arizona.jpg" alt="Image of me!" width="400" height="300" />
+            <img src="media/colorado.jpg" alt="Image of me!" width="400" height="300" />
+        </figure>
     </body>
-
 </html>
