video tag to control videos

--- a/home.html
+++ b/home.html
@@ -17,11 +17,17 @@
 
         <h2>Some videos I took over the summer that I would like to share</h2>
 
-        <iframe width="400" height="250" src="media/stl.mp4"></iframe>
+        <video width="400" height="250" controls>
+            <source src="media/stl.mp4" type="video/mp4" />
+        </video>
 
-        <iframe width="400" height="250" src="media/fireworks.mp4"></iframe>
+        <video width="400" height="250" controls>
+            <source src="media/fireworks.mp4" type="video/mp4" />
+        </video>
 
         <h2>Cat video</h2>
-        <iframe width="400" height="250" src="media/cat.mp4"></iframe>
+        <video width="400" height="250" controls>
+            <source src="media/cat.mp4" type="video/mp4" />
+        </video>
     </body>
 </html>
