--- a/aboutme.html
+++ b/aboutme.html
@@ -17,7 +17,7 @@
                 About Me:
             </h1>
             <figure>
-                <img src="media/me.JPG" alt="Image of me!" width="400" height="300" />
+                <img src="media/me.JPG" alt="Image of me!" width="400" height="300">
             </figure>
         </header>
         <p>
@@ -44,8 +44,8 @@
         </ul>
         <h2>Images of me hiking</h2>
         <figure>
-            <img src="media/arizona.jpg" alt="Image of me!" width="400" height="300" />
-            <img src="media/colorado.jpg" alt="Image of me!" width="400" height="300" />
+            <img src="media/arizona.jpg" alt="Image of me!" width="400" height="300">
+            <img src="media/colorado.jpg" alt="Image of me!" width="400" height="300">
         </figure>
     </body>
 </html>
